Fix: #30 - Fixed tours alignement

--- a/src/app/components/as-tours-list/as-tours-list.component.scss
+++ b/src/app/components/as-tours-list/as-tours-list.component.scss
@@ -1,10 +1,14 @@
-.tours {    
+:host {
+  width: 100%;
+  height: 100%;
+  background-color: #383838;
+}
+
+.tours {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1%;
+  gap: 2px;
   width: 100%;
-  height: 100%;
-  background-color: #383838;
 }
